[package]
name = "glow-margin-pool"
version = "1.0.0"
description = "Lending pools for margin accounts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "glow_margin_pool"
path = "src/lib.rs"

[features]
no-entrypoint = ["serde"]
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = [
  "glow-airspace/testing",
  "glow-margin/testing",
  "glow-metadata/testing",
]
cli = ["no-entrypoint"]
devnet = ["glow-program-common/devnet"]
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build",
  "glow-airspace/idl-build",
  "glow-margin/idl-build",
  "glow-metadata/idl-build",
]

[dependencies]
bytemuck = "1.7"
static_assertions = "1.1"
bitflags = "1.3"
serde = { version = "1.0", optional = true }

anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18"

pyth-solana-receiver-sdk = "0.5.0"

glow-program-common = { path = "../../libraries/rust/program-common" }
glow-airspace = { path = "../airspace", features = ["cpi"] }
glow-margin = { path = "../margin", features = ["cpi"] }
glow-metadata = { path = "../metadata", features = ["cpi"] }

[dev-dependencies]
serde = "1.0"
serde_test = "1.0"
