[package]
name = "glow-metadata"
version = "1.0.0"
description = "Program to map arbitrary data to accounts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "glow_metadata"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
testing = [
    "glow-airspace/testing"
]
devnet = []
idl-build = ["anchor-lang/idl-build", "anchor-lang-idl", "glow-airspace/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1" }
anchor-lang-idl = { version = "0.1.1", optional = true }
solana-program = "1.18"

glow-program-common = { path = "../../libraries/rust/program-common" }
glow-airspace = { path = "../airspace", features = ["cpi"] }
