[package]
name = "glow-test-service"
version = "1.0.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "glow_test_service"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []
devnet = ["glow-program-common/devnet", "anchor-spl/devnet", "glow-margin/devnet"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }

pyth-solana-receiver-sdk = "0.5.0"
bytemuck = "1.7"

glow-program-common = { path = "../../libraries/rust/program-common" }
glow-static-program-registry = { path = "../../libraries/rust/static-program-registry" }
glow-margin = { path = "../margin", features = ["no-entrypoint", "cpi"] }
