[package]
name = "glow-client-web"
version = "1.0.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release] 
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror = "1"
async-trait = "0.1"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4"
wasm-bindgen-derive = "0.2"
serde-wasm-bindgen = "0.5"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "FormData",
    "Blob",
    "BlobPropertyBag",
    "ServiceWorkerGlobalScope",
    "RequestCredentials",
    "File",
    "ReadableStream"
]}
console_error_panic_hook = "0.1"
console_log = "0.2"
log = "0.4"

serde_json = "1"
bincode = "1"

solana-sdk = "1.18"
spl-token = "4"

glow-client = { path = "../client" }
glow-solana-client = { path = "../solana-client", default-features = false }
glow-program-common = { path = "../program-common" }