[package]
name = "glow-client"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1"
async-trait = "0.1"
async-recursion = "1"
futures = "0.3"
bincode = "1.3"
base64 = "0.13"
cached = "0.40"
bytemuck = "1.7"
wasm-bindgen = "0.2.83"

chrono = "0.4"

serde_with = "1.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

tokio = "1"

solana-sdk = "1.18"
solana-address-lookup-table-program = "1.18"

pyth-solana-receiver-sdk = "0.5.0"

anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1" }

glow-solana-client = { path = "../solana-client" }
glow-program-common = { path = "../program-common" }
glow-instructions = { path = "../instructions" }
glow-environment = { path = "../environment" }
glow-test-service = { path = "../../../programs/test-service", features = ["no-entrypoint"] }
glow-airspace = { path = "../../../programs/airspace", features = ["no-entrypoint"] }
glow-margin = { path = "../../../programs/margin", features = ["no-entrypoint"] }
glow-metadata = { path = "../../../programs/metadata", features = ["no-entrypoint"] }
glow-margin-pool = { path = "../../../programs/margin-pool", features = ["no-entrypoint"] }

lookup-table-registry-client = { git = "https://github.com/Blueprint-Finance/lookup-table-registry.git", rev = "714a5cb", default-features = false }
lookup-table-registry = { git = "https://github.com/Blueprint-Finance/lookup-table-registry.git", rev = "714a5cb" }

[dev-dependencies]
rand_chacha = "0.3.1"
tokio = { version = "1", features = ["rt-multi-thread"] }