[package]
name = "glow-margin-sdk"
version = "1.0.0"
edition = "2021"

[lib]
name = "glow_margin_sdk"
path = "src/lib.rs"

[features]
testing = ["glow-margin/testing", "glow-metadata/testing", "glow-margin-pool/testing"]

[dependencies]
anyhow = "1"
async-recursion = "1"
async-trait = "0.1"
base64 = "0.13"
bincode = "1.3"
bytemuck = "1"
futures = "0.3"
num-traits = "0.2"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt"] }
rand = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
# Only used to manually construct RPC calls for versioned transactions, remove when upgrading to 1.14
serde_json = "1"

pyth-solana-receiver-sdk = "0.5.0"
solana-sdk = "1.18"
# Only used to manually construct RPC calls for versioned transactions, remove when upgrading to 1.14
solana-client = "1.18"
# Only used to manually construct RPC calls for versioned transactions, remove when upgrading to 1.14
solana-transaction-status = "1.18"

anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
anchor-client = "0.30.1"

glow-simulation = { path = "../simulation" }
glow-program-common = { path = "../program-common" }
glow-instructions = { path = "../instructions" }
glow-test-service = { path = "../../../programs/test-service", features = ["no-entrypoint"] }
glow-airspace = { path = "../../../programs/airspace", features = ["no-entrypoint"] }
glow-margin = { path = "../../../programs/margin", features = ["no-entrypoint"] }
glow-metadata = { path = "../../../programs/metadata", features = ["no-entrypoint"] }
glow-margin-pool = { path = "../../../programs/margin-pool", features = ["no-entrypoint"] }
glow-solana-client  = { path = "../solana-client" }
glow-static-program-registry = { path = "../static-program-registry" }
jupiter-cpi = { git = "https://github.com/Blueprint-Finance/jupiter-cpi", branch = "anchor/0.30.1" }

[dependencies.solana-address-lookup-table-program]
package = "solana-address-lookup-table-program-gateway"
git = "https://github.com/Blueprint-Finance/lookup-table-registry.git"
rev = "714a5cb"
features = ["stub-id", "stub-instruction", "stub-state"]
