[package]
name = "glow-program-common"
version = "1.0.0"
edition = "2021"

description = "A library of common types/utilities suitable for use in solana programs"
license = "AGPL-3.0-or-later"
homepage = "https://jetprotocol.io"
repository = "https://github.com/Blueprint-Finance/glow-v1"

[features]
devnet = []
debug-msg = []
idl-build = ["anchor-lang/idl-build"]
testing = []

[dependencies]
uint = "0.9"
thiserror = "1.0.20"
bytemuck = { version = "1.7", features = ["derive"] }
static_assertions = "1.1.0"
borsh = "0.10"
serde = { version = "1.0", features = ["derive"] }
hex = "*"

# Traits
num-traits = "0.2"
anchor-lang = "0.30.1"
solana-program = "1.18"
proc-macro2 = "=1.0.94"

[dev-dependencies]
rand_chacha = "0.3.1"
