[package]
name = "glow-solana-client"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bincode = "1.3"
base64 = "0.13"
log = "0.4"
itertools = "0.10"
paste = "1.0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["time"] }

solana-sdk = "1.18"
solana-transaction-status = "1.18"
solana-account-decoder = "1.18"
solana-client = { version = "1.18" }

spl-associated-token-account = { version = "2", features = ["no-entrypoint"] }
spl-token = { version = "4", features = ["no-entrypoint"] }

anchor-lang = "0.30.1"

[dev-dependencies]
anyhow = "*"
