[package]
name = "glow-testing"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = { version = "1.29", features = ["maths"] }
num-traits = "0.2"
thiserror = "1"
log = "0.4"
bytemuck = "1.7"
solana-sdk = "1.18"
solana-client = "1.18"

spl-associated-token-account = "2"

anchor-spl = { version = "0.30.1" }

glow-program-common = { path = "../program-common" }
glow-instructions = { path = "../instructions" }
glow-solana-client = { path = "../solana-client" }

spl-token = { version = "4", features = ["no-entrypoint"] }